[package]
name = "imdbdownloader"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
clap = { version = "4.0", features = ["derive"] }
term_size = "0.3"
libc = "0.2"
sha2 = "0.10"
ctrlc = "3.4"


